@@ -1916,6 +1916,32 @@ let () =
 
 (*******************************)
 
+(* Check that there is no references through recursive modules (GPR#6491) *)
+let rec check_recmod_class_type env cty =
+  match cty.pcty_desc with
+  | Pcty_constr(lid, _) ->
+      ignore (Env.lookup_cltype ~use:false ~loc:lid.loc lid.txt env)
+  | Pcty_extension _ -> ()
+  | Pcty_arrow(_, _, cty) ->
+      check_recmod_class_type env cty
+  | Pcty_open(od, cty) ->
+      let _, env = !type_open_descr env od in
+      check_recmod_class_type env cty
+  | Pcty_signature csig ->
+      check_recmod_class_sig env csig
+
+and check_recmod_class_sig env csig =
+  List.iter
+    (fun ctf ->
+       match ctf.pctf_desc with
+       | Pctf_inherit cty -> check_recmod_class_type env cty
+       | Pctf_val _ | Pctf_method _
+       | Pctf_constraint _ | Pctf_attribute _ | Pctf_extension _ -> ())
+    csig.pcsig_fields
+
+let check_recmod_decl env sdecl =
+  check_recmod_class_type env sdecl.pci_expr
+
 (* Approximate the class declaration as class ['params] id = object end *)
 let approx_class sdecl =
   let open Ast_helper in
@@ -1924,7 +1950,9 @@ let approx_class sdecl =
   { sdecl with pci_expr = clty' }
 
 let approx_class_declarations env sdecls =
-  fst (class_type_declarations env (List.map approx_class sdecls))
+  let decls, env = class_type_declarations env (List.map approx_class sdecls) in
+  List.iter (check_recmod_decl env) sdecls;
+  decls
 
 (*******************************)
 
